--- a/linkedin/src/App.css
+++ b/linkedin/src/App.css
@@ -2,8 +2,18 @@
     margin: 0;
     padding: 0;
     box-sizing: border-box;
+    text-decoration: none;
+    list-style: none;
+    overflow-x: hidden;
 }
 
 body {
     background-color: whitesmoke;
+    width: 100%;
+    height: 100vh;
+}
+
+.app__content {
+    display: flex;
+    flex-direction: row;
 }
