--- a/linkedin/src/components/Navbar/Navbar.css
+++ b/linkedin/src/components/Navbar/Navbar.css
@@ -42,6 +42,9 @@
     outline: none;
     border-radius: 5px;
     border: none;
+    margin-right: 0;
+    margin-left: 0;
+    width: 100%;
     background-color: #eef3f8;
 }
 
