--- a/linkedin/src/components/LeftSide/LeftSide.css
+++ b/linkedin/src/components/LeftSide/LeftSide.css
@@ -175,3 +175,9 @@
     text-decoration-color: #0a66c2;
     background-color: #fff;
 }
+
+@media (max-width: 1100px) {
+    .leftside {
+        display: none;
+    }
+}
